@@ -179,6 +179,7 @@ public class SetAnalyzerTest extends CrateDummyClusterServiceUnitTest {
                 "stats.jobs_log_size",
                 "stats.jobs_log_expiration",
                 "stats.jobs_log_filter",
+                "stats.jobs_log_persistent_filter",
                 "stats.operations_log_size",
                 "stats.operations_log_expiration",
                 "stats.service.interval")
