@@ -569,7 +569,7 @@ public class InformationSchemaTest extends SQLTransportIntegrationTest {
     @Test
     public void testDefaultColumns() {
         execute("select * from information_schema.columns order by table_schema, table_name");
-        assertEquals(519, response.rowCount());
+        assertEquals(520, response.rowCount());
     }
 
     @Test
