@@ -23,6 +23,8 @@ Changes
 
 - Added a new ``stats.jobs_log_filter`` setting which can be used to control
   what kind of entries are recorded into the ``sys.jobs_log`` table.
+  In addition there is a new ``stats.jobs_log_persistent_filter`` setting which
+  can be used to record entries also in the regular CrateDB log file.
 
 - Expose statement classification in ``sys.jobs_log`` table.
 
